<resources>
    <string name="app_name">Poluzone</string>
    <string name="hint_text_user">E-mail</string>
    <string name="hint_text_pass">Contraseña</string>
    <string name="hint_text_pass_rep">Confirmar contraseña</string>

    <string name="hint_text_tlf">Teléfono</string>

    <string name="login">Iniciar sesión</string>

    <string name="contrasenya">¿Has olvidado la contraseña?</string>
    <string name="regsitrate">¿No tienes cuenta? <b><u>Regístrate</u></b></string>
    <string name="logeate">¿Ya tienes cuenta? <b><u>Inicia sesión</u></b></string>

    <string name="siguiente">Siguiente</string>
    <string name="registrarse">Registrarse</string>
    <string name="guardar">Guardar</string>

    <string name="errorContrasenyaNoCoincide">Las contraseñas no coinciden</string>
    <string name="errorEmail">Formato incorrecto</string>
    <string name="completar">Complete todos los campos</string>
    <string name="errorLogin">Contraseña y/o e-mail incorrectos</string>
    <string name="yaExiste">El e-mail ya está en uso</string>
    <string name="falloFormatoPass">Debe contener al menos una mayúscula, una minúscula y un número</string>

    <string name="title_activity_navigation_drawer">Poluzone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pepito Gutierrez</string>
    <string name="nav_header_subtitle">pepi.guti@equipo3.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="inicio">Inicio</string>
    <string name="menu_home">Mapa</string>
    <string name="menu_foto">Polufoto</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_sesion">Cerrar sesión</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_info">Info</string>

    <string name="informaciongases">Información general\n
    sobre los gases</string>

    <string name="filter">Filtro</string>
    <string name="route">Rutas</string>

    <string name="calidad">Calidad del aire</string>


    <string name="co">Monóxido de carbono</string>
    <string name="nox">Óxidos de nitrógeno</string>
    <string name="dioxidoAzufre">Dióxido de azufre</string>
    <string name="ozono">Ozono</string>
    <string name="resp">Gases irritantes</string>

    <string name="app_intro">Poluzone intro</string>

    <string name="cal">Calidad del aire</string>
    <string name="veinticuatro">Durante su jornada de trabajo</string>
    <string name="estadonodo">Estado nodo: </string>
    <string name="mismedidas">Mis medidas</string>
    <string name="activo">Activo</string>
    <string name="inactivo">Inactivo</string>
    <string name="porciento">--%</string>
    <string name="nomedidas">No hay medidas disponibles</string>
    <string name="dist">Distancia recorrida:</string>
    <string name="title_activity_maps">Map</string>

    <string name="tienes_un_sensor">¿Tienes un sensor?</string>
    <string name="aceptar">Aceptar</string>
    <string name="si">Si</string>
    <string name="no">No</string>

    <string name="entendido">Entendido</string>
    <string name="directiva">Los valores límite vienen fijados en el R.D. 1073/2003, transpuesto de la Directiva 1999/30/CE.</string>
    <string name="calbien">Entre el 70–100%, significa que hay entre 0–67 ppm de contaminación en el aire.</string>
    <string name="calmed">Entre el 30–69%, significa que hay entre 68–162 ppm de contaminación en el aire.</string>
    <string name="calmal">Entre el 0–29%, significa que hay más de 163 ppm de contaminación en el aire. <b>NIVEL PELIGROSO</b></string>
    <string name="hola">Hola</string>
    <string name="mis_mediciones">Mis Mediciones</string>
    <string name="_68_162">68-162</string>
    <string name="valores">Valores:</string>
    <string name="_163"><![CDATA[>163]]></string>
    <string name="_67"><![CDATA[<67]]></string>

    <string name="infoCo">El monóxido de carbono, también denominado óxido de carbono (II), gas carbonoso y anhídrido carbonoso (los dos últimos cada vez más en desuso), cuya fórmula química es CO, es un gas incoloro y altamente tóxico. Se produce por la combustión deficiente de sustancias como gas, gasolina, queroseno, carbón, petróleo, tabaco o madera. 55 mg/m³ (50 ppm) – TLV-TWA\n
        TLV-TWA: concentración correspondiente a un día normal de 8 horas o una semana de 40 horas en la que los trabajadores pueden estar expuestos sin mostrar efectos adversos.</string>
    <string name="infoNOX">El dióxido de nitrógeno es de color marrón-amarillento. Se forma como subproducto en los procesos de combustión a altas temperaturas, como en los vehículos motorizados y las plantas eléctricas. Por ello es un contaminante frecuente en zonas urbanas. Es un gas tóxico, irritante y precursor de la formación de partículas de nitrato. Estas llevan a la producción de ácido y elevados niveles de PM-2.5 en el ambiente. Afecta principalmente al sistema respiratorio.</string>
    <string name="infoDioxi">El dióxido de azufre es un gas incoloro que, en altas concentraciones tiene un olor fuerte y penetrante que produce irritación de ojos y vías respiratorias. Se trata de una sustancia reductora que, con el tiempo, el contacto con el aire y la humedad, se convierte en trióxido de azufre. Tiene muchas aplicaciones industriales como desinfectante, antiséptico, gas refrigerante o lejía. </string>
    <string name="infoOzono">Ozono es un gas que desprende olores fuertes y generalmente sin coloración, pero en grandes concentraciones puede volverse ligeramente azulado. Si se respira en grandes cantidades puede provocar una irritación en los ojos o la garganta, la cual suele pasar después de respirar aire fresco y rico en oxígeno durante algunos minutos.
        \nEl límite recomendado de exposición es de 0,1 ppm. Entre 30 y 50 minutos de exposición pueden ser fatales.</string>
    <string name="infoResp">Los gases respiratorios irritantes provocan una inflamación inespecífica del pulmón tras ser inhalados. Tienden a ser más hidrosolubles que los gases de mayor toxicidad para el parénquima pulmonar. Los vapores tóxicos son más peligrosos cuando tienen un umbral irritante alto; es decir, apenas hay aviso de que se está inhalando el vapor porque la irritación es escasa.</string>
    <string name="infoconsejo"><b>Para contaminar menos:</b> En caso de los contaminantes producidos por la combustión de materiales tóxicos, como es el caso de en grandes ciudades, utilizar el transporte público, bicicleta, o patines eléctricos para minimizar la cantidad de estos componentes.\n\n<b>En el trabajo:</b> Para aquellas personas que trabajen expuestos a componentes contaminantes auqneu sea en una pequeña proporción, es recomendable llevar protección, como guantes y uniforme preparado para la ácidez de algunos gases, mascarillas para no inhalar el contaminante, y gafas protectoras para los gases más densos que puedan afectar al organo ocular.\n\n<b>En ciudades grandes:</b> En personas que convivan en ciudades con un nivel alto de contaminación es recomendable llevar una mascarilla para filtrar el aire, con la que poder respirar aire de más calidad.\n\n<b>En casa:</b> Disponer en casa de detectores de humo para los incendios, y detectores de fugas de gas.</string>
    <string name="consejo">Consejos</string>

</resources>
