<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/brujula"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_foto"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_foto" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/baseline_info_black_48"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_ajustes" />
    </group>
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_sesion"
            android:icon="@drawable/logout"
            android:title="@string/menu_sesion" />
    </group>

</menu>
