<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:elevation="0dp">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="3dp"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/materialCardViewBg"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:elevation="20dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/earth" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_margin="10dp"
            android:elevation="10dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView

        android:id="@+id/materialCardViewBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:minHeight="300dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardViewBoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#ffffff"
        android:padding="0dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        app:contentPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:fontFamily="@font/nunito_semibold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/registrarse"
            app:backgroundTint="@color/colorAccent" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:backgroundTint="#ffffff"
        android:clipToPadding="false"
        android:minHeight="200dp"
        android:padding="60dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_text_user"
                app:boxBackgroundColor="#00FFFFFF"
                app:boxStrokeColor="@color/colorAccent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout"
                app:startIconDrawable="@drawable/ic_email_24px">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_text_pass"
                app:boxStrokeColor="@color/colorAccent"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_lock_24px">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_text_pass_rep"
                app:boxStrokeColor="@color/colorAccent"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_lock_24px">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_text_tlf"
                app:boxStrokeColor="@color/colorAccent"
                app:startIconDrawable="@drawable/ic_phone_24px">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:inputType="phone"
                    android:maxLines="1"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="@string/logeate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/materialCardViewBoton" />


</androidx.constraintlayout.widget.ConstraintLayout>